Bug 157001 - screen reader NVDA Access Issue in LibreOffice Calc's Organize Template Menu
Summary: screen reader NVDA Access Issue in LibreOffice Calc's Organize Template Menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 ...
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-08-30 05:03 UTC by Victor
Modified: 2025-06-04 10:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Victor 2023-08-30 05:03:34 UTC
Description:
The bug prevents NVDA from accessing the menu options in the Organize Template menu of LibreOffice Calc. This menu allows users to perform actions such as renaming, deleting, and applying templates as default.


Steps to Reproduce:
1. Open LibreOffice Calc.
2. Change the column width by navigating to Format > Column > Width.
3. Save the changes by pressing Shift+F11, entering a name for the new template, choosing "My Templates" under Templates - Categories, and clicking Ok.
4. Access the Organize Template menu by pressing Ctrl+Shift+N.
5. Use the Tab key to move to the "My Templates" category combo box.
6. Use the Tab key to move to the list of templates.
7. Select your template and press the Applications key to open the menu.


Actual Results:
NVDA fails to access the menu, preventing the user from accessing options such as renaming, deleting, and applying as the default template.

Expected Results:
NVDA have access to the template menu.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 6; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: zh-TW (zh_TW); UI: en-US
Calc: threaded

NVDA issue:
https://github.com/nvaccess/nvda/issues/6908
Comment 1 Michael Weghorn 2023-08-30 08:25:13 UTC
Thanks for bringing the NVDA issue to here!

I can still reproduce with a current development version.

NVDA 2023.1

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43939d0b3286266217a2625d5a7a3de1a2cdd303
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 2 Michael Weghorn 2024-12-02 17:20:50 UTC
I think I've found the root cause and am working on a fix for this issue as well as tdf#164093.
Comment 3 Commit Notification 2024-12-05 19:12:13 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6708246e20ce522e673f539369cd38687d2dd16d

tdf#164093 tdf#157001 a11y: Improve menu window disposal

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-12-05 19:13:18 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b608604d0bbecdc24a17175374581b4e2d720658

tdf#164093 tdf#157001 wina11y: Use vcl::Window's actual XAccessible

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2024-12-06 09:11:04 UTC
The commits from comment 3 and comment 4 fix part of the problem (I no longer get warnings about already disposed a11y objects being used), but unlike tdf#164093, there's still something left to do, which needs further analysis.
Comment 6 Commit Notification 2024-12-07 07:29:35 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f6f9a751445af8d6db7b5f497f3838fbb7efeb53

tdf#164093 tdf#157001 a11y: Improve menu window disposal

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-12-07 08:35:48 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3667de208b5f6475519bade6dfdfaea4e239a2ba

tdf#164093 tdf#157001 wina11y: Use vcl::Window's actual XAccessible

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-12-19 18:30:53 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3077098976996fdd9573eed2ebffdd4356423567

tdf#157001 wina11y: Remove popup menu with its children

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Weghorn 2024-12-19 18:32:16 UTC
(In reply to Michael Weghorn from comment #5)
> The commits from comment 3 and comment 4 fix part of the problem (I no
> longer get warnings about already disposed a11y objects being used), but
> unlike tdf#164093, there's still something left to do, which needs further
> analysis.

With the commit from comment 8 in place, this works in my tests now.